testdata/parser/negative/28.pdl
#version 100

int main(int a) {
    int x = 0;
    (x + 5)++; // not assignable
    return x;
}